load("@cr//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "bdd-infra",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    aliases = aliases(),
    crate_name = "bdd_infra",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

# Variant with rp-harness feature enabled. rp's BDD tests use the
# rp_harness module (OmniSim, rp config builder, webhook receiver,
# test orchestrator, MCP client) and the sky_survey_camera_harness
# module (SkyView stub, sky-survey-camera config builder, process
# spawner). The rp-harness feature gates the deps on rp-fits (the
# plate-solver stub's CRVAL round-trip and the SkyView stub's
# WCS-bearing FITS minting) and rp-ephemeris (the ComputedSky
# site/targets for planner-driven scenarios).
rust_library(
    name = "bdd-infra_rp_harness",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    aliases = aliases(),
    crate_features = ["rp-harness"],
    crate_name = "bdd_infra",
    # The OmniSim profile seed tree rides along in the runfiles of every
    # test that links this harness, so the per-instance OMNISIM_SETTINGS_DIR
    # seeding (rp_harness/omnisim.rs `seed_config_source`, branch 2 -- the
    # cwd-ancestors walk) resolves it under Bazel. Without this the seed
    # never resolved under Bazel and OmniSim ran on upstream defaults.
    data = glob(["omnisim-config/**"]),
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = [
        "//crates/rp-ephemeris",
        "//crates/rp-fits",
    ] + all_crate_deps(normal = True),
)

# Variant with the conformu feature enabled. Services' conformu_integration
# tests use run_conformu() to drive the ConformU CLI directly, replacing
# ascom_alpaca::test::ConformUTestBuilder so they no longer need the
# ascom-alpaca/test feature (whose transitive `dtor` dep crate_universe can't
# resolve). No extra deps.
rust_library(
    name = "bdd-infra_conformu",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/bin/**"],
    ),
    aliases = aliases(),
    crate_features = ["conformu"],
    crate_name = "bdd_infra",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(normal = True),
)

# Helper binary used by bdd-infra's own integration tests. Referenced via the
# TEST_SERVICE_BINARY env var by tests/service_handle.rs.
rust_binary(
    name = "test_service",
    srcs = ["src/bin/test_service.rs"],
    edition = "2021",
    visibility = ["//visibility:public"],
    deps = [":bdd-infra"] + all_crate_deps(normal = True),
)

rust_test(
    name = "bdd-infra_unit_test",
    size = "small",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    crate = ":bdd-infra",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    # 3 of the run_once_* tests shell out to `cargo build` when RP_BINARY
    # isn't pre-set. See docs/plans/archive/bazel-migration.md "Known test gaps".
    tags = ["requires-cargo"],
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

# Unit tests of the feature-gated rp_harness / sky_survey_camera_harness
# modules. The base :bdd-infra_unit_test compiles WITHOUT the rp-harness
# feature, so those modules' tests (OmniSim restart serialization, config
# builders, stubs, SSE parsing) are cfg'd out of it — and it is tagged
# requires-cargo anyway, so per-PR `bazel test //...` never ran them; they
# only ran in the nightly Cargo safety net. This target compiles the
# rp-harness variant and positively filters to the two feature-gated
# module trees, skipping the base `tests::` module whose run_once_* tests
# shell out to cargo. All filtered-in tests are hermetic (localhost axum
# stubs, tempfiles, pure parsing), so no requires-cargo tag: they run on
# every PR — including the #431 restart-serialization regression test.
rust_test(
    name = "bdd-infra_rp_harness_unit_test",
    size = "small",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    args = [
        "rp_harness::",
        "sky_survey_camera_harness::",
    ],
    crate = ":bdd-infra_rp_harness",
    crate_features = ["rp-harness"],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//crates/rp-ephemeris",
        "//crates/rp-fits",
    ] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "service_handle",
    size = "small",
    srcs = ["tests/service_handle.rs"],
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    data = [":test_service"],
    edition = "2021",
    env = {
        "TEST_SERVICE_BINARY": "$(rootpath :test_service)",
    },
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [":bdd-infra"] + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
