[package]
name = "bdd-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared BDD test infrastructure: process lifecycle (ServiceHandle) plus the optional rp-harness feature (OmniSim, rp config builder, webhook receiver, test orchestrator, MCP client) for plugin/workflow BDD tests"

[lints]
workspace = true

[features]
default = []
# Enables the rp-ecosystem test harness: OmniSim, webhook receiver, test
# orchestrator, MCP client, rp config builder, and rp launcher. Opt-in so that
# services whose tests only need `ServiceHandle` don't compile axum/reqwest/rmcp.
rp-harness = [
    "dep:axum",
    "dep:humantime",
    "dep:reqwest",
    "dep:rmcp",
    "dep:serde_json",
]

[dependencies]
libc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Optional — only pulled in when the rp-harness feature is enabled.
axum = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true, features = [
    "client",
    "transport-streamable-http-client-reqwest",
] }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
