[package]
name = "bdd-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared BDD test infrastructure: process lifecycle (ServiceHandle) plus the optional rp-harness feature (OmniSim, rp config builder, webhook receiver, test orchestrator, MCP client) for plugin/workflow BDD tests"

[lints]
workspace = true

[features]
default = []
# Enables the rp-ecosystem test harness: OmniSim, webhook receiver, test
# orchestrator, MCP client, rp config builder, and rp launcher. Opt-in so that
# services whose tests only need `ServiceHandle` don't compile axum/reqwest/rmcp.
rp-harness = [
    "dep:axum",
    "dep:chrono",
    "dep:humantime",
    "dep:reqwest",
    "dep:rp-ephemeris",
    "dep:rp-fits",
    "dep:rp-mcp-client",
]
# Enables the `conformu` module: a direct ConformU-CLI runner used by services'
# conformu_integration tests. No extra deps (it uses tokio::process, already a
# default dependency). Replaces ascom_alpaca::test::ConformUTestBuilder so the
# conformu tests no longer pull `ascom-alpaca/test` — whose transitive `dtor`
# dep crate_universe can't resolve, which kept them out of the Bazel build.
conformu = []
# Enables the `tls_auth` module: the shared PKI + credentials fixture and the
# `tls_auth_smoke_steps!` macro every service's BDD suite uses to prove the
# shared server config's TLS + Basic Auth gate. Opt-in so consumers that only
# need `ServiceHandle` (e.g. conformu integration tests) don't compile
# reqwest and the rusty-photon-tls/rp-auth crypto stack.
tls-auth = [
    "dep:reqwest",
    "dep:rp-auth",
    "dep:rusty-photon-tls",
    "dep:uuid",
]

[dependencies]
libc = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Optional — only pulled in when the rp-harness feature is enabled.
axum = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rp-auth = { workspace = true, optional = true }
rp-ephemeris = { workspace = true, optional = true }
rp-fits = { workspace = true, optional = true }
rp-mcp-client = { workspace = true, optional = true }
rusty-photon-tls = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
