load("@cr//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

# Vendored first-party QHYCCD SDK binding (ADR-009). Two library variants — the
# same real/sim split `crates/rp-plate-solver` uses for its mock:
#   * `qhyccd-rs`      links the REAL static SDK (production).
#   * `qhyccd-rs_sim`  (testonly) enables the `simulation` feature so
#     `Sdk::new()` fabricates a pure-Rust QHY178M (no FFI, no USB) for the
#     qhy-camera BDD + ConformU suites.
# `testonly = True` makes Bazel reject any production rust_binary that links the
# simulated SDK, so the real/sim boundary is build-enforced, not review-enforced.
#
# crate_universe resolves ONE feature set per crate, so the real variant
# harmlessly carries the simulation-only optional deps (rand/rayon) as unused —
# exactly as rp-plate-solver's production variant carries mockall. The
# `libqhyccd-sys` FFI sub-crate is a workspace member depended on explicitly
# (it is NOT an `all_crate_deps` entry). See docs/services/qhy-camera.md
# "Native dependency & build gating".

_LIBQHYCCD_SYS = "//crates/qhyccd-rs/libqhyccd-sys:libqhyccd-sys"

rust_library(
    name = "qhyccd-rs",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_name = "qhyccd_rs",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = [_LIBQHYCCD_SYS] + all_crate_deps(normal = True),
)

rust_library(
    name = "qhyccd-rs_sim",
    testonly = True,
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_features = ["simulation"],
    crate_name = "qhyccd_rs",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = [_LIBQHYCCD_SYS] + all_crate_deps(normal = True),
)

# The crate's own unit tests (src/tests/{camera,filter_wheel,sdk}_tests.rs), run
# under Bazel against the sim variant — mirrors crates/zwo-rs:zwo-rs_unit_test.
# Without this the suite only ran under `cargo test`, so it was both
# ungated by the Bazel gate and absent from `bazel coverage` (qhyccd-rs read ~34%
# vs Cargo's ~93%, only incidentally covered via qhy-camera's sim usage). The
# `simulation` `crate_features` must be set explicitly — rust_test does NOT inherit
# it from the wrapped `crate` — or the `#[cfg(feature = "simulation")]` tests (the
# bulk) compile out. `mockall` arrives via the dev-deps. The sim variant still
# links the SDK (simulation removes the camera, not the link), so this runs in the
# SDK-provisioned bazel.yml / bazel-coverage.yml jobs, like zwo-rs.
rust_test(
    name = "qhyccd-rs_unit_test",
    size = "medium",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    crate = ":qhyccd-rs_sim",
    crate_features = ["simulation"],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
