[package]
name = "qhyccd-rs"
version = "0.1.9"
edition = "2021"
# Explicit, lower-than-workspace MSRV: this crate is dual-homed to crates.io
# (ADR-009), so its published floor must reflect what DOWNSTREAM consumers can
# build on, NOT the workspace's unified 1.94.1. The floor is verified out-of-tree
# by the nightly publish-readiness check (docs/plans/publish-readiness-checks.md),
# which packages the crate and builds it on this toolchain with a
# direct-minimal-versions lockfile — it cannot be verified in-workspace because
# the root `profile.dev.debug = "line-tables-only"` needs Rust >= 1.71 and the
# shared Cargo.lock pins newest deps. 1.68.0 is the standalone floor (proc-macro2
# v1.0.104 + thiserror 2.x); `cargo msrv find` in that job ratchets it.
rust-version = "1.68.0"
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["qhyccd", "astronomy", "camera"]
repository = "https://github.com/ivonnyssen/qhyccd-rs"
documentation = "https://docs.rs/qhyccd-rs"
description = """
Rust bindings for the QHYCCD SDK.
This crate provides a safe interface to the QHYCCD SDK for controlling QHYCCD cameras and filter wheels.
The libqhyccd-sys crate provides the raw FFI bindings. It uses tracing for logging and eyre for error handling.
"""
categories = ["aerospace", "api-bindings"]
homepage = "https://github.com/ivonnyssen/qhyccd-rs/wiki"

# Marks this crate (+ its nested FFI sub-crate) for the nightly publish-readiness
# check (docs/plans/publish-readiness-checks.md). Discovered via `cargo metadata`
# just like [package.metadata.conformu]/[package.metadata.miri]. ONLY the four
# dual-homed FFI crates carry this; the rest of the workspace is never checked.
# - sys-crate:     the nested build-script sub-crate to co-verify standalone.
# - skip-link-env: set =1 so the build script emits no link directives, letting
#                  `cargo check` run with no QHYCCD SDK installed.
# - needs-libclang: this family's build script needs libclang (bindgen). False
#                   here (hand-written FFI); true for zwo.
[package.metadata.publish-readiness]
sys-crate = "libqhyccd-sys"
skip-link-env = "QHYCCD_SKIP_NATIVE_LINK"
needs-libclang = false

# Declare the `coverage_nightly` cfg (set by the workspace coverage job) so the
# `#[cfg_attr(coverage_nightly, coverage(off))]` exclusions don't trip the
# `unexpected_cfgs` lint. Declared crate-locally rather than via
# `[lints] workspace = true` so this crate stays publishable standalone (it is
# dual-homed to crates.io — see ADR-009).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = []
simulation = ["rand", "rayon"]

[dependencies]
libqhyccd-sys = { version = "0.1.4", path = "libqhyccd-sys" }
eyre = "0.6.12"
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
educe = "0.6.0"
rand = { version = "0.9.2", optional = true }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
mockall = { version = "0.14.0", features = [] }
