[package]
name = "qhyccd-rs"
version = "0.1.9"
edition = "2021"
# Inherits the workspace MSRV (1.94.1): in-tree this crate is built within the
# workspace, whose root manifest uses `profile.dev.debug = "line-tables-only"`
# (Rust >= 1.71), so a lower standalone floor (was 1.68.0) can't be verified
# here. Flattens to the concrete version on `cargo publish`. See ADR-009.
rust-version.workspace = true
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["qhyccd", "astronomy", "camera"]
repository = "https://github.com/ivonnyssen/qhyccd-rs"
documentation = "https://docs.rs/qhyccd-rs"
description = """
Rust bindings for the QHYCCD SDK.
This crate provides a safe interface to the QHYCCD SDK for controlling QHYCCD cameras and filter wheels.
The libqhyccd-sys crate provides the raw FFI bindings. It uses tracing for logging and typed QHYError values (via thiserror) for error handling.
"""
categories = ["aerospace", "api-bindings"]
homepage = "https://github.com/ivonnyssen/qhyccd-rs/wiki"

# Declare the `coverage_nightly` cfg (set by the workspace coverage job) so the
# `#[cfg_attr(coverage_nightly, coverage(off))]` exclusions don't trip the
# `unexpected_cfgs` lint. Declared crate-locally rather than via
# `[lints] workspace = true` so this crate stays publishable standalone (it is
# dual-homed to crates.io — see ADR-009).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = []
simulation = ["rand", "rayon"]

[dependencies]
libqhyccd-sys = { version = "0.1.4", path = "libqhyccd-sys" }
# Shared third-party deps inherit the single workspace pin (Rule 10); identity
# metadata (version/edition/license/...) stays explicit for the dual-home release
# cadence (ADR-009). `cargo publish` flattens inherited versions to concrete ones,
# so standalone publishing is unaffected. Errors are typed via thiserror
# (`QHYError`). (tracing-subscriber is only used by the examples/ demos, so it is
# a dev-dependency below — library consumers don't pull it.)
thiserror = { workspace = true }
tracing = { workspace = true }
# Non-poisoning locks (guard the camera handle / simulated state). `parking_lot`
# is the workspace standard, already used by the consuming camera services; its
# `RwLock` returns the guard directly, so there is no poison error to model.
parking_lot = { workspace = true }
# `eq` feature = derive_more::PartialEq, used with `#[partial_eq(skip)]` so Camera
# equality ignores its backend handle.
derive_more = { workspace = true, features = ["eq"] }
rand = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

#to make Zminimal happy
tracing-attributes = "0.1.28"
enum-ordinalize-derive = "4.3.1"
lazy_static = "1.0.2"

[dev-dependencies]
mockall = { workspace = true }
# Used only by the demo programs in examples/ (FmtSubscriber), not the library,
# so consumers of qhyccd-rs no longer pull it. Inherits the workspace pin.
tracing-subscriber = { workspace = true }
