[package]
name = "qhyccd-rs"
version = "0.1.9"
edition = "2021"
# Explicit, lower-than-workspace MSRV: this crate is dual-homed to crates.io
# (ADR-009), so its published floor must reflect what DOWNSTREAM consumers can
# build on, NOT the workspace's unified 1.94.1. The floor is verified out-of-tree
# by the nightly publish-readiness check (docs/plans/publish-readiness-checks.md),
# which packages the crate and builds it on this toolchain with a
# direct-minimal-versions lockfile — it cannot be verified in-workspace because
# the root `profile.dev.debug = "line-tables-only"` needs Rust >= 1.71 and the
# shared Cargo.lock pins newest deps. 1.85.0 is the standalone floor: the
# `simulation` feature pulls rand 0.10 (MSRV 1.85) + its chacha20/getrandom chain;
# the base build is held to 1.81 by derive_more 2.1. (Was 1.68 before #392 moved
# this crate onto rand 0.10 / derive_more 2.1.) `cargo msrv find` ratchets it.
rust-version = "1.85.0"
authors = ["Igor von Nyssen <igor@vonnyssen.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["qhyccd", "astronomy", "camera"]
repository = "https://github.com/ivonnyssen/qhyccd-rs"
documentation = "https://docs.rs/qhyccd-rs"
description = """
Rust bindings for the QHYCCD SDK.
This crate provides a safe interface to the QHYCCD SDK for controlling QHYCCD cameras and filter wheels.
The libqhyccd-sys crate provides the raw FFI bindings; this crate wraps them in a safe API, using tracing for logging and returning typed QHYError values (via thiserror) for error handling.
"""
categories = ["aerospace", "api-bindings"]
homepage = "https://github.com/ivonnyssen/qhyccd-rs/wiki"

# Marks this crate (+ its nested FFI sub-crate) for the nightly publish-readiness
# check (docs/plans/publish-readiness-checks.md). Discovered via `cargo metadata`
# just like [package.metadata.conformu]/[package.metadata.miri]. ONLY the four
# dual-homed FFI crates carry this; the rest of the workspace is never checked.
# - sys-crate:     the nested build-script sub-crate to co-verify standalone.
# - skip-link-env: set =1 so the build script emits no link directives, letting
#                  `cargo check` run with no QHYCCD SDK installed.
# - needs-libclang: this family's build script needs libclang (bindgen). False
#                   here (hand-written FFI); true for zwo.
[package.metadata.publish-readiness]
sys-crate = "libqhyccd-sys"
skip-link-env = "QHYCCD_SKIP_NATIVE_LINK"
needs-libclang = false

# Declare the `coverage_nightly` cfg (set by the workspace coverage job) so the
# `#[cfg_attr(coverage_nightly, coverage(off))]` exclusions don't trip the
# `unexpected_cfgs` lint. Declared crate-locally rather than via
# `[lints] workspace = true` so this crate stays publishable standalone (it is
# dual-homed to crates.io — see ADR-009).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = []
simulation = ["rand", "rayon"]

[dependencies]
libqhyccd-sys = { version = "0.1.4", path = "libqhyccd-sys" }
# Shared third-party deps inherit the single workspace pin (Rule 10); identity
# metadata (version/edition/license/...) stays explicit for the dual-home release
# cadence (ADR-009). `cargo publish` flattens inherited versions to concrete ones,
# so standalone publishing is unaffected. Errors are typed via thiserror
# (`QHYError`). (tracing-subscriber is only used by the examples/ demos, so it is
# a dev-dependency below — library consumers don't pull it.)
thiserror = { workspace = true }
tracing = { workspace = true }
# Non-poisoning locks (guard the camera handle / simulated state). `parking_lot`
# is the workspace standard, already used by the consuming camera services; its
# `RwLock` returns the guard directly, so there is no poison error to model.
parking_lot = { workspace = true }
# `eq` feature = derive_more::PartialEq, used with `#[partial_eq(skip)]` so Camera
# equality ignores its backend handle.
derive_more = { workspace = true, features = ["eq"] }
rand = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
mockall = { workspace = true }
# Used only by the demo programs in examples/ (FmtSubscriber), not the library,
# so consumers of qhyccd-rs no longer pull it. Inherits the workspace pin.
tracing-subscriber = { workspace = true }
