[package]
name = "rp-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP Basic Auth utilities for Rusty Photon services"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
argon2 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
tower = "0.5"
