load("@cr//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

exports_files(
    ["Cargo.toml"],
    visibility = ["//visibility:public"],
)

# rp-vocabulary is a first-party leaf (not an `@cr` entry), so it is named
# as an explicit Bazel label rather than resolved by `all_crate_deps`.
# `ResolvedTarget.coord` is the validated `rp_vocabulary::IcrsCoord`
# (ADR-019), so one coordinate type spans catalog → store → planner.
_INTRA_WORKSPACE_DEPS = [
    "//crates/rp-vocabulary:rp-vocabulary",
]

rust_library(
    name = "rp-catalog",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    # The four CSVs are pulled in via `include_str!` at compile time;
    # Bazel's sandbox only stages files declared as inputs.
    compile_data = glob(["src/data/*.csv"]),
    crate_name = "rp_catalog",
    edition = "2021",
    proc_macro_deps = all_crate_deps(proc_macro = True),
    visibility = ["//visibility:public"],
    deps = _INTRA_WORKSPACE_DEPS + all_crate_deps(normal = True),
)

rust_test(
    name = "rp-catalog_unit_test",
    size = "small",
    aliases = aliases(
        normal_dev = True,
        proc_macro_dev = True,
    ),
    crate = ":rp-catalog",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = _INTRA_WORKSPACE_DEPS + all_crate_deps(
        normal = True,
        normal_dev = True,
    ),
)
