[package]
name = "rp-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Embedded Messier + NGC + IC catalog with name/alias resolution for Rusty Photon"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
csv = { workspace = true }
rp-vocabulary = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
