[package]
name = "rp-fits"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FITS reader/writer wrapper for Rusty Photon services"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
fitsrs = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
